--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
 
         <activity
                 android:name=".presentation.root.MainActivity"
-                android:label="@string/app_name"
+                android:label="@string/novelties"
+                android:screenOrientation="portrait"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
