--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     def moxy_version = "1.5.5"
     def glide_version = "4.8.0"
     def daggerVer = "2.20" // or latest version
+    def nav_version = "2.1.0-alpha03"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // AppCompan, RecycleView, CardView
@@ -81,7 +82,6 @@ dependencies {
     implementation "com.jakewharton:butterknife:$butterknife_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
     // Stetho core
-    api 'com.facebook.stetho:stetho:1.5.0'
     //Work Manager
     implementation "android.arch.work:work-runtime:1.0.0-beta01"
     // Moxy
@@ -90,9 +90,12 @@ dependencies {
     implementation "com.arello-mobile:moxy-app-compat:$moxy_version"
     kapt "com.arello-mobile:moxy-compiler:$moxy_version"
     // Stetho
+    api 'com.facebook.stetho:stetho:1.5.0'
     api 'com.facebook.stetho:stetho-okhttp:1.5.0'
     implementation "androidx.core:core:1.1.0-alpha03"
-    //
+    //NavigationComponent
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version" // For Kotlin use navigation-fragment-ktx
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version" // For Kotlin use navigation-ui-ktx
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
